--- a/_posts/2016-5-4-cd.markdown
+++ b/_posts/2016-5-4-cd.markdown
@@ -11,8 +11,8 @@ TDD, BDD, CI, CD, REST-API - короткий перечень тех аббре
 по ветру, но не использовались мною. Складывалось впечатление, что я далеко от
 этого мира. Будучи С++ прогером, ковыряющим в основном бэкенд, я начал писать
 небольшое веб-приложение. Про путь от Clojure до Django рассказывать грустно
-мне(хотя Django весьма хорош), поэтому начну с момента, когда я начал
-прикручивать [CircleCI](http://circleci.com).
+(хотя Django весьма хорош), поэтому начну с момента, когда я начал прикручивать
+[CircleCI](http://circleci.com).
 
 ## Continuos Integration(CI)
 
